5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1593_1802.log
== TEST (2019-03-28 10:32:17) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3)
print(vida - dano)			  
-- ERROR:
File "XXXX", line 7
    print(vida - dano)			  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:32:32) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3)
		  
-- ERROR:
File "XXXX", line 8
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:32:39) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3)		  
-- ERROR:
File "XXXX", line 7
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:32:49) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
-- ERROR:
File "XXXX", line 7
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:33:03) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:33:20) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- EXECUTION TIME:
0.161012
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:33:25) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:33:46) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2//3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:26) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:36:02) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = ((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:36:16) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:38:04) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:38:14) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- EXECUTION TIME:
0.207764
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:38:16) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:38:17) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:38:24) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- EXECUTION TIME:
0.138984
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:38:26) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:38:27) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:39:13) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = float(input("Primeiro dado: "))
D2 = float(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- EXECUTION TIME:
0.201875
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:39:14) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = float(input("Primeiro dado: "))
D2 = float(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:39:38) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:41:46) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int(5*D1**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:42:06) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = int((5*D1)**0.5 + (pi**D2/3))		  
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:42:44) 
-- CODE:
from math import *
vida = int(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = ((5*D1)**0.5 + (pi**D2/3))		  
print(int(vida - dano))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:46:53) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = abs((5*D1)**0.5 + (pi**D2/3))
danototal = int(dano)
print(vida - danototal)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:46:59) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = abs((5*D1)**0.5 + (pi**D2/3))
danototal = int(dano)
print(vida - danototal)
-- EXECUTION TIME:
0.157379
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:03) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = abs((5*D1)**0.5 + pi**(D2/3))
danototal = int(dano)
print(vida - danototal)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:48:08) 
-- CODE:
from math import *
vida = float(input("Vida do monstro: "))
D1 = int(input("Primeiro dado: "))
D2 = int(input("Segundo dado: "))

dano = abs((5*D1)**0.5 + pi**(D2/3))
danototal = int(dano)
print(vida - danototal)
-- EXECUTION TIME:
0.173705
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
